upddated slide order, removing extra content

--- a/originals/tvm1-7.html
+++ b/originals/tvm1-7.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,24 +32,31 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
-                        <p class="answer">The answer is 4.7 years.</p>
-                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
+                        <p class="question">How much money would you have in after the second year if you rolled over the $110 earned in the first year?</p>
+                        <p class="answer">The answer is $121.</p>
                         <hr>
-                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
-                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
+                        <h4>Let's review:</h4>
+                        <p>
+                            <ul>
+                                <li>We calculated the 1st year of interest earned by multiplying the interest rate times the 1st year starting principal. Then we added the 1st year interest to the principal.
+                                </li>
+                                <li>Next, we calculated the 2nd year of interest by finding 10% of the new principal amount. Then, we added the 2nd year interest to the new principal amount.
+                                </li>
+                            </ul>
+                        </p>
+                        <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV). Click help if you need more help to solve this question.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="btn"><a href="tvm1-18.html">Back</a></button>
-                    <button type="button" class="btn">Continue</button>
+                    <button type="button" class="btn"><a href="tvm1-6.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-8.html">Continue</a></button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">21</div>
+                    <div class="page-number">8</div>
                 </div>
             </div>
         </div>
