--- a/tvm1/help/help1-1.html
+++ b/tvm1/help/help1-1.html
@@ -54,21 +54,21 @@
                                     <li>Multiply the interest rate times the principal amount.</li>
                                 </ul>
                                 <div>
-                                    <img class='math' src="../images/int-example.svg" alt="10% * 100 = $11">
+                                    <img class='math' src="../../images/int-example.svg" alt="10% * 100 = $11">
                                     <p></p>
                                 </div>
                             </li>
                             <li>Finally, to calculate the amount you'd have in one year, add the interest payment back to the initial investment (principal).
                                 <div>
-                                    <img class="math" src="../images/fv-example.svg" alt="$100 + $10 = $110">
+                                    <img class="math" src="../../images/fv-example.svg" alt="$100 + $10 = $110">
                                 </div>
                             </li>
                             <li>You can do this in one equation like this:
                                 <div>
-                                    <img class="math" src="../images/int-y1-combined.svg" alt="">
+                                    <img class="math" src="../../images/int-y1-combined.svg" alt="(.10)100+100=110">
                                 </div>
                                 <p>Or like this:</p>
-                                <div><img class="math" src="../images/alternate-format-y1.svg" alt=""></div>
+                                <div><img class="math" src="../../images/alternate-format-y1.svg" alt="100(1+.10)=110"></div>
                             </li>
                         </ul>
 
