--- a/tvm1/help/help1-2.html
+++ b/tvm1/help/help1-2.html
@@ -40,17 +40,17 @@
                         <p>Steps to figure out the answer:
                             <ul>
                                 <li>First, calculate the interest payment. The interest rate is 10%. This time the principal is $110. To find the interest payment, multiply the interest rate times the principal (PV) amount.
-                                    <div><img class="math" src="../images/int-yr2-example.svg"></div>
+                                    <div><img class="math" src="../../images/int-yr2-example.svg"></div>
                                 </li>
                                 <li>
                                     Now, add the interest payment to the initial investment (principal).
-                                    <div><img class="math" src="../images/fv-yr2-example.svg"></div>
+                                    <div><img class="math" src="../../images/fv-yr2-example.svg"></div>
                                 </li>
                                 <li>
                                     Here is the complete equation:
-                                    <div><img class="math" src="../images/int-y2-combined.svg"></div>
+                                    <div><img class="math" src="../../images/int-y2-combined.svg"></div>
                                     <p>Or:</p>
-                                    <div><img class="math" src="../images/alternate-format-y2.svg" alt=""></div>
+                                    <div><img class="math" src="../../images/alternate-format-y2.svg" alt=""></div>
                                 </li>
                             </ul>
                         </p>
