--- a/tvm1/tvm1-18.html
+++ b/tvm1/tvm1-18.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
 
-        <div id="" class="slide stop">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -32,23 +32,24 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Answer this question:</p>
                         <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
-
-                        <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
-
+                        <p class="answer">The answer is 4.7 years.</p>
+                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
+                        <hr>
+                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
+                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="btn"><a href="tvm1-17.html">Back</a></button>
-                    <button type="button" class="btn"><a href="tvm1-19.html">Continue</a></button>
+                    <button type="button" class="btn"><a href="tvm1-exercises.html">To Exercises</a></button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">20</div>
+                    <div class="page-number">21</div>
                 </div>
             </div>
         </div>
