--- a/tvm1/tvm1-2.html
+++ b/tvm1/tvm1-2.html
@@ -31,27 +31,22 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <div id="intro" class="bottom-space">
-                            <h2>Introduction</h2>
-                            <p>This is the first of four tutorials on the Time Value of Money (TVM). In this first part, we'll start with the basic equation and variables. Subsequent tutorials will add complexity by introducing compound interest, payments, and annuities.</p>
-                            <p>TVM may require you to use some math skills that you haven’t used in a while. Contact your instructor if you need additional help.</p>
-                        </div>
+                        <h2>The Time Value of Money</h2>
+                    <hr>
                         <div id="learningObj" class="bottom-space">
                             <h3>Learning Objectives</h3>
-                            <p>By the end of this tutorial, you will:
                                 <ul>
                                     <li>Identify the TVM variables within a given word problem</li>
                                     <li>Understand the relationship between variables in the TVM equation</li>
                                     <li>Memorize and recall the general form of the TVM equation</li>
                                     <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
                                 </ul>
-                            </p>
                         </div>
                         <div id="requirements" class="bottom-space">
                             <h3>Requirements</h3>
                             <p>To complete this tutorial, you will need:
                                 <ul>
-                                    <li>Basic algebra skills, including Order of Operations (PEMDAS) and FOIL.</li>
+                                    <li>Basic algebra skills, including Order of Operations (PEMDAS) and FOIL. <a target="_blank" href="./help/math-basics.html">Click here to review these math principles.</a></li>
                                     <li>Paper and pencil or pen</li>
                                     <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
                                 </ul>
