--- a/tvm1/tvm1-3.html
+++ b/tvm1/tvm1-3.html
@@ -35,7 +35,7 @@
                         <h2>TVM Equation</h2>
                         <p>One of the central concepts of finance is that <i>a dollar today is worth more than a dollar in the future</i>. For example, if you make a purchase with a credit card, interest is added to the bill to compensate the credit card company for lending you money. Conversely, if you deposit money in a savings account, the bank pays you interest to compensate you for lending them money.</p>
                         <p>Time Value of Money (TVM) is the equation we use to convert between today's money and money in the future. Transactions operate on this principal every day.</p>
-                        <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p>
+                        <!-- <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p> -->
 
                         <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
                         <p>For example:</p>
