--- a/tvm1/tvm1-5.html
+++ b/tvm1/tvm1-5.html
@@ -32,9 +32,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</p>
+                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. <b>If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</b></p>
                         <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
                         <p class="answer">The answer is $110.</p>
+                        <p><a href="help/help1-1.html" target="_blank">See the steps for solving this problem here.</a></p>
 
                     </div>
                 </div>
