--- a/tvm1/tvm1-6.html
+++ b/tvm1/tvm1-6.html
@@ -35,6 +35,18 @@
 
                         <p>Now apply the same process to roll over the loan for a second year. Some find this a little more complicated, but the steps are the same. Once you have the answer, click Continue. If you don't know how to calculate the answer, click Help.</p>
                         <p class="question">How much money would you have in another year if you rolled over the $110 earned in the first year?</p>
+                        <p class="answer">The answer is $121.</p>
+                        <hr>
+                        <h4>Let's review:</h4>
+                        <p>
+                            <ul>
+                                <li>We calculated the 1st year of interest earned by multiplying the interest rate times the 1st year starting principal. Then we added the 1st year interest to the principal.
+                                </li>
+                                <li>Next, we calculated the 2nd year of interest by finding 10% of the new principal amount. Then, we added the 2nd year interest to the new principal amount.
+                                </li>
+                            </ul>
+                        </p>
+                        <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV). Click help if you need more help to solve this question.</p>
                     </div>
                 </div>
             </div>
@@ -46,7 +58,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">7</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
