--- a/tvm1/tvm1-exercises.html
+++ b/tvm1/tvm1-exercises.html
@@ -19,13 +19,19 @@
 
             <!-- exercise intro slide -->
             <!---------------- SLIDE 27  - EXERCISES -->
-            <div id="exercise1-slide1" class="slide exercise-slide">
+            <div id="exercise1-1" class="slide exercise-slide">
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: The Basics</h2>
                         <h3 class="secondary-title">Exercises</h3>
                     </div>
                 </div>
+                <nav class="row">
+                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+                </nav>
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
