--- a/tvm1/tvm1-10.html
+++ b/tvm1/tvm1-10.html
@@ -16,7 +16,6 @@
     <div class="container-fluid">
 
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,28 +32,12 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 1: Solution</h4>
-                        <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
-                        <p>Let's work through the problem.</p>
-                        <ul>
-                            <li>First, identify the variables:</li>
-                            <div><img class="math" src="../images/variables.svg">
-                            </div>
-                            <li>Once you've identified the variables, plug the numbers into the equation: </li>
-                            <div><img class="math" src="../images/plug-in-numbers.svg">
-                            </div>
-                            <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
-                            <div><img class="math" src="../images/add-numbers.svg">
-                            </div>
-
-                            <li>Next, apply the exponent. Be careful about rounding.</li>
-                            <div><img class="math" src="../images/apply-exponent.svg"></div>
-
-
-                            <li>Finally, do the multiplication.</li>
-                            <div><img class="math" src="../images/fv-answer.svg"></div>
-                            </li>
-                        </ul>
+                        <p>In the problem we just solved, the number in parentheses is called the Future Value Factor. In the ‘good old days’ before calculators, people used tables of pre-calculated Future Value Factors to solve the TVM equation.</p>
+                        <p>First, find the intersection of the number of periods (years) on the left and the interest rate at the top to find the Future Value Factor. Then multiply PV times the Future Value Factor to calculate FV.</p>
+                        <div class="bottom-space">
+                            <img src="../images/fv_factor_table_example_10_years.png" class="border img-fluid">
+                        </div>
+                        <div><img class="math" src="../images/future-value-factor.svg"></div>
                     </div>
                 </div>
             </div>
@@ -66,7 +49,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">11</div>
+                    <div class="page-number">13</div>
                 </div>
             </div>
         </div>
