--- a/tvm1/tvm1-11.html
+++ b/tvm1/tvm1-11.html
@@ -15,7 +15,6 @@
 <body>
     <div class="container-fluid">
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,12 +31,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>In the problem we just solved, the number in parentheses is called the Future Value Factor. In the ‘good old days’ before calculators, people used tables of pre-calculated Future Value Factors to solve the TVM equation.</p>
-                        <p>First, find the intersection of the number of periods (years) on the left and the interest rate at the top to find the Future Value Factor. Then multiply PV times the Future Value Factor to calculate FV.</p>
-                        <div class="bottom-space">
-                            <img src="../images/fv_factor_table_example_10_years.png" class="border img-fluid">
-                        </div>
-                        <div><img class="math" src="../images/future-value-factor.svg"></div>
+                        <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
+                        <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
+                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
+                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
+                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
+                        <p class="text-center">
+                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
+                        </p>
                     </div>
                 </div>
             </div>
@@ -49,7 +50,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">13</div>
+                    <div class="page-number">14</div>
                 </div>
             </div>
         </div>
