--- a/tvm1/tvm1-14.html
+++ b/tvm1/tvm1-14.html
@@ -16,7 +16,8 @@
     <div class="container-fluid">
 
 
-        <div id="" class="slide">
+
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -32,9 +33,13 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p class="answer">The answer is $100.</p>
-                        <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+                        <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
+                        <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
+                        <div><img class="math" src="../images/exponent-step.svg"></div>
+                        <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -46,11 +51,10 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">16</div>
+                    <div class="page-number">17</div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
