--- a/tvm1/tvm1-17.html
+++ b/tvm1/tvm1-17.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
 
-        <div id="" class="slide">
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -32,9 +32,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p class="answer">The answer is 11.612%.</p>
-                        <p>If you answered correctly, click Continue. If you answered incorrectly, click the Help button to calculate the answer.</p>
+                        <p>Answer this question:</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+
+                        <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
+
                     </div>
                 </div>
             </div>
@@ -46,7 +48,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">19</div>
+                    <div class="page-number">20</div>
                 </div>
             </div>
         </div>
